--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^0.20.0
   firebase_database: ^6.0.0
   provider: ^4.3.3
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
