Live Tracking, Database connection and learning tab

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="sarpt_app"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBwweTIuHDgc0ujPPOpC0NfPk78PhjawDY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -33,6 +35,7 @@
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
               android:resource="@drawable/launch_background"
               />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
