--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_maps_flutter: ^1.0.10
   location: ^3.2.1
   url_launcher: ^5.7.10
+  flutter_string_encryption: ^0.3.1
+  crypt: ^3.0.0
 
 dev_dependencies:
   flutter_test:
